:sparkles: feat: Add initial Express route and configuration

--- a/.prettierrc
+++ b/.prettierrc
@@ -3,5 +3,11 @@
   "trailingComma": "all",
   "singleQuote": true,
   "printWidth": 80,
-  "arrowParens": "avoid"
+  "arrowParens": "avoid",
+  "prettier/prettier": [
+    "error",
+    {
+      "endOfLine": "auto"
+    }
+  ]
 }
