:wrench: chore: Add basic TypeORM configuration

--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,13 @@
+#Aplication
 PORT=3000
 NODE_ENV=development
 API_URL=http://localhost:3000
+
+# Database
+DB_TYPE=mongodb
+DB_HOST=localhost
+DB_PORT=5433
+DB_SCHEMA=public
+DB_NAME=mongodb
+DB_USER=mongodb
+DB_PASS=mongodb
