--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "dev": "npx dotenv-cli -e .env -- ts-node-dev -r tsconfig-paths/register --inspect --transpile-only --ignore-watch node_modules src/common/infrastructure/http/server.ts",
     "lint": "eslint .",
-    "test": "npx dotenv-cli -e .env.test -- jest --runInBand"
+    "test": "npx dotenv-cli -e .env.test -- jest --runInBand",
+    "typeorm": "ts-node-dev -r tsconfig-paths/register ./node_modules/typeorm/cli.js"
   },
   "keywords": [],
   "author": "",
@@ -13,11 +14,13 @@
   "description": "",
   "dependencies": {
     "@types/cors": "^2.8.17",
+    "@types/mongodb": "^4.0.7",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "dotenv-cli": "^8.0.0",
     "express": "^4.19.2",
     "express-async-errors": "^3.1.1",
+    "mongodb": "^5.9.2",
     "reflect-metadata": "^0.2.2",
     "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^5.0.1",
