:sparkles: feat: Configure MongoDB with TypeORM

--- a/.env.example
+++ b/.env.example
@@ -5,9 +5,6 @@ API_URL=http://localhost:3000
 
 # Database
 DB_TYPE=mongodb
-DB_HOST=localhost
-DB_PORT=5433
-DB_SCHEMA=public
-DB_NAME=mongodb
-DB_USER=mongodb
-DB_PASS=mongodb
+DB_CONNECTION=mongodb+srv://user:passsword@flexlease.twsqj.mongodb.net/?retryWrites=true&w=majority&appName=Flexlease
+
+
