--- a/.env.example
+++ b/.env.example
@@ -1,10 +1,12 @@
-#Aplication
-PORT=3000
+PORT=3333
 NODE_ENV=development
-API_URL=http://localhost:3000
+API_URL=http://localhost:3333
 
 # Database
-DB_TYPE=mongodb
-DB_CONNECTION=mongodb+srv://user:passsword@flexlease.twsqj.mongodb.net/?retryWrites=true&w=majority&appName=Flexlease
-
-
+DB_TYPE=postgres
+DB_HOST=localhost
+DB_PORT=5432
+DB_SCHEMA=public
+DB_NAME=postgres
+DB_USER=postgres
+DB_PASS=postgres
