--- a/package.json
+++ b/package.json
@@ -13,12 +13,13 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@types/pg": "^8.11.11",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "dotenv-cli": "^8.0.0",
     "express": "^4.19.2",
     "express-async-errors": "^3.1.1",
-    "mongodb": "^5.9.2",
+    "postgres": "^3.4.5",
     "reflect-metadata": "^0.2.2",
     "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^5.0.1",
@@ -29,7 +30,6 @@
     "@eslint/js": "^9.9.0",
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
-    "@types/mongodb": "^4.0.7",
     "@types/node": "^22.3.0",
     "@types/swagger-jsdoc": "^6.0.4",
     "@types/swagger-ui-express": "^4.1.7",
