--- a/package.json
+++ b/package.json
@@ -18,7 +18,10 @@
   "dependencies": {
     "@faker-js/faker": "^9.4.0",
     "@types/pg": "^8.11.11",
+    "axios": "^1.8.4",
+    "bcryptjs": "^3.0.2",
     "cors": "^2.8.5",
+    "cpf-cnpj-validator": "^1.0.3",
     "dotenv": "^16.4.5",
     "dotenv-cli": "^8.0.0",
     "express": "^4.19.2",
